home feature improvements

--- a/features/home/pubspec.yaml
+++ b/features/home/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   cached_network_image: ^3.0.0
   flutter_drawer_menu: ^0.1.2
   pinch_to_zoom_scrollable: ^0.1.1
-
+  stream_transform: ^2.1.0
 
 dev_dependencies:
   freezed: ^2.4.6
@@ -35,7 +35,6 @@ dev_dependencies:
   injectable_generator:
     path: ../../infrastructure/injectable_generator
   json_serializable: ^6.7.1
-  auto_route_generator: ^7.3.2
 
 flutter:
   uses-material-design: true
