--- a/all_lint_rules.yaml
+++ b/all_lint_rules.yaml
@@ -94,7 +94,7 @@ linter:
     - parameter_assignments
     - prefer_adjacent_string_concatenation
     - prefer_asserts_in_initializer_lists
-    - prefer_asserts_with_message
+    - prefer_asserts_with_message: false
     - prefer_collection_literals
     - prefer_conditional_assignment
     - prefer_const_constructors
