--- a/melos.yaml
+++ b/melos.yaml
@@ -52,6 +52,9 @@ scripts:
   codegen:
     run: melos exec -c 1 --depends-on="build_runner" -- flutter pub run build_runner build --delete-conflicting-outputs
     description: Run code generation using build_runner
+  dartfix:
+    run: melos exec -c 1 -- dart fix --dry-run
+    description: Dart fix
   codegen:selective:
     run: melos exec -c 1 --depends-on="build_runner" -- flutter pub run build_runner build --delete-conflicting-outputs
     description: Run code generation using build_runner in a specific package
