--- a/deps_versions.yaml
+++ b/deps_versions.yaml
@@ -2,8 +2,8 @@
 # If a different version is used in any package,
 # it will be changed to the version specified in this file.
 dependencies:
-  intl: ^0.18.1
-  get_it: ^7.6.4
+  intl: ^0.19.0
+  get_it: 7.6.4
   injectable: ^2.3.2
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
@@ -12,10 +12,13 @@ dependencies:
   bloc_concurrency: ^0.2.3
   equatable: ^2.0.3
   shared_preferences: ^2.2.2
+  dio: ^5.4.0
+  retrofit: ^4.1.0
 dev_dependencies:
   melos: ^3.4.0
   freezed: ^2.4.6
   build_runner: ^2.4.7
   json_serializable: ^6.7.1
   auto_route_generator: ^7.3.2
+  retrofit_generator: ^8.1.0
 
