--- a/features/home/pubspec.yaml
+++ b/features/home/pubspec.yaml
@@ -18,14 +18,14 @@ dependencies:
   graphql_flutter: ^5.1.2
   # Caching
   hive: ^2.0.4
-
+  hive_flutter: ^1.1.0
   # UI
   pagination_view:
     git:
       url: https://github.com/vedartm/pagination_view.git
   ant_icons: ^2.0.0-nullsafety.0
   cached_network_image: ^3.0.0
-  flutter_drawer_menu: ^0.1.2
+  flutter_drawer_menu: ^0.1.3
   pinch_to_zoom_scrollable: ^0.1.1
   stream_transform: ^2.1.0
 
@@ -35,6 +35,7 @@ dev_dependencies:
   injectable_generator:
     path: ../../infrastructure/injectable_generator
   json_serializable: ^6.7.1
+  retrofit_generator: ^8.1.0
 
 flutter:
   uses-material-design: true
