--- a/infrastructure/common/pubspec.yaml
+++ b/infrastructure/common/pubspec.yaml
@@ -10,18 +10,23 @@ dependencies:
   flutter:
     sdk: flutter
 
+  ## IO
+  dio: ^5.4.0
+  retrofit: ^4.1.0
   ## Bloc
   flutter_bloc: ^8.1.3
   bloc_concurrency: ^0.2.3
   equatable: ^2.0.3
   ## Packages
-  get_it: ^7.6.4
+  get_it: 7.6.4
   flutter_svg: ^2.0.9
   ## DI
   injectable: ^2.3.2
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   # Localization
-  intl: ^0.18.1
+  intl: ^0.19.0
   # Navigation
   auto_route: ^7.8.4
+  # Logger
+  logger: ^2.0.2+1
