--- a/infrastructure/core/pubspec.yaml
+++ b/infrastructure/core/pubspec.yaml
@@ -15,12 +15,12 @@ dependencies:
     path: ../common/
 
   equatable: ^2.0.3
-  get_it: ^7.6.4
+  get_it: 7.6.4
   flat: ^0.4.0
 
   freezed_annotation: ^2.4.1
   # Network
-  internet_connection_checker: ^0.0.1+1
+  internet_connection_checker: ^2.0.0
 
   # Misc
   dartz: ^0.10.0-nullsafety.2
@@ -37,10 +37,3 @@ dev_dependencies:
   injectable_generator:
     path: ../../infrastructure/injectable_generator
   json_serializable: ^6.7.1
-
-  # Linting
-  #effective_dart: ^1.3.1
-
-  # Testing
-  #bloc_test: ^8.0.2
-  #mocktail: ^0.1.4
