--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,14 @@
 name: melos_workspace
-description: A new Flutter project.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-version: 1.0.0+1
+description: Melos workspace Flutter project.
+publish_to: 'none'
+version: 1.0.1+2
 
 environment:
-  sdk: ">=2.16.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  multi_package_sample:
-    path: apps/app
-  multi_package_sample2:
-    path: apps/app2
   yaml: any
   yaml_edit: ^2.1.0
 
